[package]
name = "headers-remake"
authors = ["Arshil Hapani <arshilhapani998@gmail.com>"]
version = "0.1.2"
edition = "2021"
description = "It is a remake of the headers"
readme = "README.md"
repository = "https://github.com/ArshilHapani/Header-remake"
license = "MIT"
keywords = ["headers", "remake", "rust", "cli"]

[dependencies]
arboard = "3.4.1"
color-print = "0.3.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
